[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib', "rlib"]

[dependencies]
cosmwasm-std = { version = "1.2.5", features = ["staking"] }
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cosmwasm-schema = "1.2.5"
schemars = "0.8.12"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
cw-multi-test = "0.16.4"
